[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/portal/blue_portal.png" type="Texture" id=1]
[ext_resource path="res://Entities/portal/portal.gd" type="Script" id=2]
[ext_resource path="res://Entities/portal/orange_portal.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("blue_portal/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 90.0, 180.0, 270.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("orange_portal/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 90.0, 180.0, 270.0 ]
}

[node name="portal" type="KinematicBody2D"]
z_index = 5
collision_mask = 0
script = ExtResource( 2 )
STATIC = true
TOP_SPEED = 0
FORCE_MULT = 0.0
INANIMATE = true
truName = "portal"

[node name="blue_portal" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 82

[node name="Sprite" type="Sprite" parent="blue_portal"]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blue_portal"]
shape = SubResource( 1 )

[node name="orange_portal" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 82

[node name="Sprite" type="Sprite" parent="orange_portal"]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="orange_portal"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
playback_speed = 2.0
"anims/New Anim" = SubResource( 2 )

[connection signal="body_entered" from="blue_portal" to="." method="_on_blue_portal_body_entered"]
[connection signal="body_exited" from="blue_portal" to="." method="_on_link_a_body_exited"]
[connection signal="body_entered" from="orange_portal" to="." method="_on_link_b_body_entered"]
[connection signal="body_exited" from="orange_portal" to="." method="_on_link_b_body_exited"]
